--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,10 @@
     --header-height: 50px;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Abhaya Libre', serif;
     background-color: #F7F6F2;
@@ -44,6 +48,7 @@ img {
 .c-container-small {
     max-width: 690px;
     margin: 0 auto;
+    overflow: hidden;
     padding: 0 30px;
 }
 
@@ -81,7 +86,7 @@ img {
 }
 
 .c-quiz-time {
-    background-color: #d4e8ff;
+    background-color: #bbffb3;
     padding: 60px 0;
 }
 
@@ -90,7 +95,7 @@ img {
     box-shadow: 0px 0px 10px #3F3F44;
     position: fixed;
     top: 0px;
-    width: 100%;
+    width: 100vw;
     background-color: #3F3F44;
     color: #F7F6F2;
     z-index: 1000;
@@ -131,8 +136,11 @@ img {
 }
 
 .main__banner__img {
-    max-width: 100vw;
-    max-height: 100vh;
+    width: 100%;
+    height: 90vh;
+    background-image: url('https://assets.newatlas.com/dims4/default/116d868/2147483647/strip/true/crop/2000x1500+0+0/resize/1280x960!/quality/90/?url=http%3A%2F%2Fnewatlas-brightspot.s3.amazonaws.com%2F0f%2F42%2Fe49df1af491a9f5b2140d6a5775a%2Fdepositphotos-222756018-l-2015.jpg');
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .main__banner__author {
